tools/hermes/tests/fixtures/sizedness/source/out.txt
  × unknown declaration
   ╭─[/usr/local/google/home/joshlf/workspace/zerocopy/hermes/tools/hermes/tests/fixtures/sizedness/source/src/lib.rs:8:5]
 7 │ /// context
 8 │ /// derive_sized NamedStruct
   ·     ────────────┬───────────
   ·                 ╰── here
 9 │ /// ```
   ╰────

  ⚠ declaration uses `sorry`
    ╭─[/usr/local/google/home/joshlf/workspace/zerocopy/hermes/tools/hermes/tests/fixtures/sizedness/source/src/lib.rs:10:8]
  9 │ /// ```
 10 │ pub fn foo(_f: &NamedStruct) {}
    ·        ──┬─
    ·          ╰── here
    ╰────

Error: Lean verification failed
